<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#F3F3F7">

            <TextView
                android:id="@+id/lecture_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="9dp"
                android:text="@string/lecture_string"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/lecture_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="@string/lecture_name_string"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toRightOf="@+id/lecture_text"
                app:layout_constraintTop_toTopOf="@+id/lecture_text" />

            <TextView
                android:id="@+id/group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/group_text"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintLeft_toLeftOf="@id/lecture_text"
                app:layout_constraintTop_toBottomOf="@+id/lecture_name" />

            <TextView
                android:id="@+id/group_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/group_name_string"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/group"
                app:layout_constraintLeft_toLeftOf="@+id/lecture_name"
                app:layout_constraintTop_toTopOf="@id/group"

                />

            <TextView
                android:id="@+id/cafedra"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cafedra"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_marginTop="8dp"
                app:layout_constraintLeft_toLeftOf="@+id/group"
                app:layout_constraintTop_toBottomOf="@+id/group_data"

                />

            <TextView
                android:id="@+id/cafedra_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cafedra_data"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/cafedra"
                app:layout_constraintLeft_toLeftOf="@id/group_data"
                app:layout_constraintTop_toTopOf="@+id/cafedra"

                />

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/time"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_marginBottom="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="@id/cafedra"
                app:layout_constraintTop_toBottomOf="@id/cafedra_data" />

            <TextView
                android:id="@+id/data_time_lecture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_data"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/time"
                app:layout_constraintLeft_toLeftOf="@+id/cafedra_data"
                app:layout_constraintTop_toTopOf="@+id/time" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>